# ticketing_dapp

client/: client.py  pyproject.toml
client/contracts/: Tickets.abi.json
dapp/contracts/: Tickets.sol
dapp/contracts/artifacts/: Tickets.json  Tickets_metadata.json
